Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-62520

[WinRT] Cannot connect to Bluetooth (standard) service

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.12.1
    • 5.9.1
    • None
    • Windows 10 Creators Update 64bits

      msvc2015 64bits
    • WinRT
    • d55434e4e36132d0c09107f22323b02cd1dff3a9

    Description

      I try to connect to a Bluetooth Rfcomm SerialPort service using QBluetoothSocket::connectToService(const QBluetoothServiceInfo &service, OpenMode openMode = ReadWrite).

      The call returns successfully, after a few seconds the event QBluetoothSocket::error is raised with the error QBluetoothSocket::UnknownSocketError.

      The QBluetoothServiceInfo given as parameter is built manually using the QBluetoothDeviceInfo got from the device discovery. The device is paired using Windows configuration interface.

      Enabling QLoggingCategory::setFilterRules(QStringLiteral("qt.bluetooth* = true")); shows no additional information.

      The same code works using Android.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            owolff Oliver Wolff
            cmr Christian Müller
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes